# INF155_TP2_Romain_-_Amorella

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: project-builds-CMake.yml  project-builds-GCC.yml
TP2 - Circuits/: t_circuit.h  t_entree.h  t_pin_entree.h  t_porte.h
TP2 - Circuits/TP2 - Circuits/: AAA  CMakeLists.txt  FILESLIB.c  FILESLIB.h  Test_cuircuit_portes.c  bonus.c  bonus.h  circuitA.txt  circuitB.txt  circuit_IO.c  circuit_IO.h  files_portes.c  files_portes.h  main_circuit.c  main_circuit.h  main_test_partie1.c  nouv_circuit.txt  t_circuit.c  t_circuit.h  t_entree.c  t_pin_entree.c  t_pin_sortie.c  t_pin_sortie.h  t_porte.c  t_porte.h  t_sortie.c  t_sortie.h  table_de_veritee.c  table_de_veritee.h  test.txt  test2.txt
